--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -1240,33 +1240,10 @@ ul.products .yith-wcdp {
     text-align: center;
 }
 
-.twostep02-descriptions .row.ethics .card-body:first-of-type {
-    height: 21rem;
+.twostep02-descriptions .row .card-body:first-of-type {
+    height:auto;
 }
 
-.twostep02-descriptions .row.hondros #course-description-painless .card-body:first-of-type {
-    height: 42.5rem;
-}
-
-.twostep02-descriptions .row.hondros .card-body:first-of-type {
-    height: 32.5rem;
-}
-
-.twostep02-descriptions.members-ce .row .card-body:first-of-type {
-    height: 30.5rem;
-}
-
-.twostep02-descriptions .row.core .card-body:first-of-type {
-    height: 28rem;
-}
-
-.twostep02-descriptions .row.elective .card-body:first-of-type {
-    height: 32rem;
-}
-
-.twostep02-descriptions .row.designation .card-body:first-of-type {
-    height: 39rem;
-}
 
 .twostep02-descriptions .row .card-body:last-of-type {
     text-align:center;
@@ -2169,6 +2146,35 @@ No media query since this is the default in Bootstrap because it is "mobile firs
         padding-right: .35rem!important;
         padding-left: .35rem!important;
     }
+
+    .twostep02-descriptions .row.ethics .card-body:first-of-type {
+        height: 21rem;
+    }
+
+    .twostep02-descriptions .row.hondros #course-description-painless .card-body:first-of-type {
+        height: 42.5rem;
+    }
+
+    .twostep02-descriptions .row.hondros .card-body:first-of-type {
+        height: 32.5rem;
+    }
+
+    .twostep02-descriptions.members-ce .row .card-body:first-of-type {
+        height: 30.5rem;
+    }
+
+    .twostep02-descriptions .row.core .card-body:first-of-type {
+        height: 31rem;
+    }
+
+    .twostep02-descriptions .row.elective .card-body:first-of-type {
+        height: 32rem;
+    }
+
+    .twostep02-descriptions .row.designation .card-body:first-of-type {
+        height: 39rem;
+    }
+
 }
 
 /* Large devices (desktops, 992px and up) */
